--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,6 +78,123 @@
 		appearance: none;
 	}
 
+
+	/* NewBox from buscador */
+
+	.newbox {
+		background: #737373;
+		border-radius: 6px;
+		box-shadow: 0 2px 0 0 #e5e5e5;
+		margin: 0 0 2em 0;
+		padding: 3em;
+	}
+
+		.newbox > :last-child {
+			margin-bottom: 0;
+		}
+
+		.newbox.alt {
+			background: none !important;
+			border-radius: 0 !important;
+			box-shadow: none !important;
+			margin: 0 0 2em 0;
+			padding: 0 !important;
+		}
+
+		.newbox.features .features-row {
+			border-top: solid 2px #e5e5e5;
+			position: relative;
+		}
+
+			.newbox.features .features-row:after {
+				clear: both;
+				content: '';
+				display: block;
+			}
+
+			.newbox.features .features-row section {
+				float: left;
+				padding: 3em;
+				width: 50%;
+			}
+
+				.newbox.features .features-row section :last-child {
+					margin-bottom: 0;
+				}
+
+				.newbox.features .features-row section:nth-child(2n) {
+					padding-right: 0;
+				}
+
+					.newbox.features .features-row section:nth-child(2n):before {
+						background: #e5e5e5;
+						content: '';
+						display: block;
+						height: 100%;
+						margin-left: -3em;
+						position: absolute;
+						top: 0;
+						width: 2px;
+					}
+
+				.newbox.features .features-row section:nth-child(2n-1) {
+					padding-left: 0;
+				}
+
+			.newbox.features .features-row:first-child {
+				border-top: 0;
+			}
+
+				.newbox.features .features-row:first-child section {
+					padding-top: 0;
+				}
+
+			.newbox.features .features-row:last-child {
+				padding-bottom: 0;
+			}
+
+				.newbox.features .features-row:last-child section {
+					padding-bottom: 0;
+				}
+
+		.newbox.special {
+			text-align: center;
+		}
+
+		.newbox .image.featured {
+			border-radius: 0;
+			display: block;
+			margin: 3em 0 3em -3em;
+			position: relative;
+			width: calc(100% + 6em);
+		}
+
+			.newbox .image.featured img {
+				border-radius: 0;
+				display: block;
+				width: 100%;
+			}
+
+			.newbox .image.featured:first-child {
+				border-radius: 6px 6px 0 0;
+				margin-bottom: 3em;
+				margin-top: -3em;
+			}
+
+				.newbox .image.featured:first-child img {
+					border-radius: 6px 6px 0 0;
+				}
+
+			.newbox .image.featured:last-child {
+				border-radius: 0 0 6px 6px;
+				margin-bottom: -3em;
+				margin-top: 3em;
+			}
+
+				.newbox .image.featured:last-child img {
+					border-radius: 0 0 6px 6px;
+				}
+
 /* Basic */
 
 	@-ms-viewport {
@@ -2098,6 +2215,28 @@
 		margin-right: auto;
 	}
 
+	input[type="textbuscador"],
+	select,
+	textarea {
+		-moz-appearance: none;
+		-webkit-appearance: none;
+		-ms-appearance: none;
+		appearance: none;
+		background-color: #f0f0f0;
+		border-radius: 6px;
+		border: solid 1px #000000;
+		color: black;
+		display: block;
+		outline: 0;
+		padding: 0 1em;
+		text-decoration: none;
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	
+
 		input[type="text"]:invalid,
 		input[type="password"]:invalid,
 		input[type="email"]:invalid,
@@ -2106,9 +2245,22 @@
 			box-shadow: none;
 		}
 
+		input[type="textbuscador"]:invalid,
+		select:invalid,
+		textarea:invalid {
+			box-shadow: none;
+		}
+
 		input[type="text"]:focus,
 		input[type="password"]:focus,
 		input[type="email"]:focus,
+		select:focus,
+		textarea:focus {
+			border-color: #505657;
+			box-shadow: 0 0 0 2px #505657;
+		}
+
+		input[type="textbuscador"]:focus,
 		select:focus,
 		textarea:focus {
 			border-color: #505657;
@@ -2141,6 +2293,11 @@
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	select {
+		height: 3em;
+	}
+
+	input[type="textbuscador"],
 	select {
 		height: 3em;
 	}
@@ -3346,9 +3503,23 @@
 			border: 0;
 		}
 
+		#cta input[type="textbuscador"],
+		#cta select,
+		#cta textarea {
+			color: #ffffff;
+			background: rgba(255, 255, 255, 0.15);
+			border: 0;
+		}
+
 			#cta input[type="text"]:focus,
 			#cta input[type="password"]:focus,
 			#cta input[type="email"]:focus,
+			#cta select:focus,
+			#cta textarea:focus {
+				box-shadow: inset 0 0 0 2px #fff;
+			}
+
+			#cta input[type="textbuscador"]:focus,
 			#cta select:focus,
 			#cta textarea:focus {
 				box-shadow: inset 0 0 0 2px #fff;
