--- a/assets/css/propio.css
+++ b/assets/css/propio.css
@@ -39,3 +39,11 @@ div.gallery {
     width: 05px;
     /*padding:0*/
   }
+
+  .caja {
+		background: rgb(138, 138, 138);
+		border-radius: 6px;
+		box-shadow: 0 2px 0 0 #e5e5e5;
+		margin: 0 0 2em 0;
+		padding: 3em;
+	}
