--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3229,7 +3229,7 @@
 			-webkit-animation: none;
 			-ms-animation: none;
 			animation: none;
-			background: none;
+			background: grey;
 			color: rgba(255, 255, 255, 0.75);
 			position: absolute;
 		}
